<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="me"
            type="com.kanykeinu.chocoorder.ui.fragment.product_list.ProductListFragment" />
        <variable
            name="viewModel"
            type="com.kanykeinu.chocoorder.ui.fragment.product_list.ProductListViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/order_block"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_product_list" />

        <RelativeLayout
            android:id="@+id/order_block"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/total_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/total_price"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/total_price_label"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@android:color/black"
                android:text="@string/_0"
                tools:text="$335665" />

            <Button
                android:id="@+id/btn_make_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/make_order"
                android:onClick="@{()->me.makeOrder()}"
                android:textAllCaps="false" />

        </RelativeLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{safeUnbox(viewModel.productListLoading) ? View.VISIBLE : View.GONE}"/>

    </RelativeLayout>

</layout>